--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <a-entity geometry="primitive: plane; height: 0.25; width: 0.5" scale="" position="-1.16689 2.50127 0.993" material="color: #111111; metalness: 0.74" rotation="0 180 0">
           <a-entity id="directiondecorate" position="-0.129 0 0.00143" visible="false" material=""
                     animation__goup ="property: position;dur:1000;startEvents: goup;pauseEvents: hidedirection;loop:true;easing: linear;to: -0.129 0.051 0.00143"
-                    animation__godown ="property: position;dur:1000;startEvents: godown;loop:true;pauseEvents: hidedirection;easing: linear;to: -0.129 0 0.00143"
+                    animation__godown ="property: position;dur:1000;startEvents: godown;pauseEvents: hidedirection;loop:true;easing: linear;to: -0.129 -0.051 0.00143"
                     proxy-event__hidedirection="event: set_floor;to: #directiondecorate;as: hidedirection"
                     proxy-event__showdirection="event: moving;to: #directiondecorate;as: showdirection"
                     proxy-event__goup1="event: goup;to: #directiondecorateUp"
@@ -206,12 +206,12 @@
           >
             <a-entity id="directiondecorateUp" geometry="primitive: triangle" scale="0.051 0.051 0.051" material=""
                       event-set__goup="_event: goup; visible: true"
-                      event-set__godown="_event: gowdown; visible: false"
+                      event-set__godown="_event: godown; visible: false"
             >
             </a-entity>
             <a-entity id="directiondecorateDown" geometry="primitive: triangle" scale="0.051 0.051 0.051" rotation="0 0 180" material=""
                       event-set__goup="_event: goup; visible: false"
-                      event-set__godown="_event: gowdown; visible: true"
+                      event-set__godown="_event: godown; visible: true"
             >
             </a-entity>
           </a-entity>
