--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
 
       });
 
-
   </script>
   <!--<iframe id="promoweb" style=" position: fixed; left: 0; top: 0; z-index: -1; overflow: hidden" src="https://idatavisualizationlab.github.io"></iframe>-->
     <a-scene data-html2canvas-ignore="true" gamestate="level: 0;" gamestate-visuals=""
@@ -151,6 +150,12 @@
                                    collidesWith: red, blue;
                                    collisionForces: false">
         </a-mixin>
+
+        <a-mixin id="hightlight" geometry="primitive: circle; radius: 0.03" position="-0.05045 0.00463 -0.0012" material="color: #04a4ac; emissive: #0699c4; emissiveIntensity: 0.5" visible="false"></a-mixin>
+        <a-mixin id="description" position = "0.111 0 0" scale="0.196 0.196 0.196"
+                  text="wrapCount:12; font: assets/fonts/DejaVu-sdf.fnt; fontImage: assets/fonts/DejaVu-sdf.png; value: hi i; anchor: left"
+        ></a-mixin>
+
         <a-mixin id="cube" dynamic-body grabbable
                  geometry="primitive: box; width: 0.5; height: 0.5; depth: 0.5">
         </a-mixin>
@@ -222,22 +227,28 @@
 
       <a-entity geometry="primitive: plane; height: 0.75; width: 0.5" scale="" position="1.16689 1.559 -0.98804" material="color: #111111; metalness: 0.74">
         <a-entity id="clicksound" sound="src: #clickWav;poolSize:4"></a-entity>
+        <a-entity position="-0.19764 0.34717 0.002">
+          <a-entity scale="1 1 0.196" text="width: 0.6; font: assets/fonts/DejaVu-sdf.fnt; fontImage: assets/fonts/DejaVu-sdf.png; value: Weather; anchor: left; color: #59dff7"></a-entity>
+          <a-entity scale="1 1 0.196" text="width: 1.4; font: assets/fonts/DejaVu-sdf.fnt; fontImage: assets/fonts/DejaVu-sdf.png; value: 30; anchor: right; color: #59dff7; align: right" position="0.26827 -0.07319"></a-entity>
+          <a-entity scale="1 1 0.196" text="width: 0.5; font: assets/fonts/DejaVu-sdf.fnt; fontImage: assets/fonts/DejaVu-sdf.png; value: o; anchor: left; color: #59dff7" position="0.27416 -0.06127"></a-entity>
+          <a-entity scale="1 1 0.196" text="width: 1.4; font: assets/fonts/DejaVu-sdf.fnt; fontImage: assets/fonts/DejaVu-sdf.png; value: F; anchor: left; color: #59dff7" position="0.29517 -0.07319"></a-entity>
+        </a-entity>
         <a-entity id="floor_2" button_floor="value: 2" geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/3rdfloor.png" position="-0.12935 0.14 0.00149"
                   event-set__click="clicked:true">
-          <a-entity class="hightlight" geometry="primitive: circle; radius: 0.03" position="-0.05045 0.00463 -0.0012" material="color: #04a4ac; emissive: #0699c4; emissiveIntensity: 0.5" visible="false"></a-entity>
+          <a-entity class="hightlight" mixin="hightlight"></a-entity>
+          <a-entity class="description" mixin="description"></a-entity>
         </a-entity>
         <a-entity id="floor_1" button_floor="value: 1"  geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/2ndfloor.png" position="-0.12935 0.045 0.00149">
-          <a-entity class="hightlight" geometry="primitive: circle; radius: 0.03" position="-0.05045 0.00463 -0.0012" material="color: #04a4ac; emissive: #0699c4; emissiveIntensity: 0.5" visible="false"></a-entity>
-          <a-entity class="description" position = "0.111 0 0"
-                    text="width: 1; font: assets/fonts/DejaVu-sdf.fnt; fontImage: assets/fonts/DejaVu-sdf.png; value: ${ELEVATOR.currentstate}; anchor: left"
-                    animation__changetext ="property: text.value;loop:true;delay:1000;easing: linear;to: hello"
-
-          ></a-entity>
+          <a-entity class="hightlight" mixin="hightlight"></a-entity>
+          <a-entity class="description" mixin="description"></a-entity>
         </a-entity>
         <a-entity id="floor_0" button_floor="value: 0" geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/Ground.png" position="-0.12935 -0.05 0.00149">
-          <a-entity class="hightlight" geometry="primitive: circle; radius: 0.03" position="-0.05045 0.00463 -0.0012" material="color: #04a4ac; emissive: #0699c4; emissiveIntensity: 0.5" visible="false"></a-entity>
+          <a-entity class="hightlight" mixin="hightlight"></a-entity>
+          <a-entity class="description" mixin="description"></a-entity>
         </a-entity>
         <a-entity id="floor_-1" button_floor="value: -1" geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/Basement.png" position="-0.12935 -0.145 0.00149">
+          <a-entity class="hightlight" mixin="hightlight"></a-entity>
+          <a-entity class="description" mixin="description"></a-entity>
         </a-entity>
       </a-entity>
       <a-plane geometry="height: 2.5; width: 1.7" rotation="0 -90" position="1.563 1.754 0.113"
