--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
       <!-- floor entity. 'default' collision group so cubes will bounce off -->
       <!--restrict-position-->
       <a-entity id="player"
-                body="type: static; mass: 0; shape: none;"
+                body="type: dynamic; mass: 5; shape: none;"
                 shape__main="shape: cylinder;
-                       height: 1.6;
+                       height: 0.6;
                        radiusTop: 1;
-                       radiusBottom: 1;"
+                       radiusBottom: 0.24;"
                 width="1"
                 height="1.6"
                 position="0 1.6 0"
